client-end annotation, but cropped image still bugs

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -52,6 +52,18 @@
     position: relative;
 }
 
+#upload_annotation{
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: burlywood;
+    color: black;
+    border: none;
+    cursor: pointer;
+    z-index: 3;
+    position: relative;
+    display: none;
+}
+
 #upload_button:hover {
     background-color: #0056b3;
 }
